<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/my_account"
            android:icon="@android:drawable/ic_dialog_info"
            android:title="@string/my_account"
            android:onClick="loadProfileActivity" />
        <item
            android:id="@+id/offers"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/offers"
            android:onClick="loadShowOffersActivity" />
        <item
            android:id="@+id/create_offer"
            android:icon="@android:drawable/ic_menu_directions"
            android:title="@string/create_offer"
            android:onClick="loadCreateOfferActivity" />
        <item
            android:id="@+id/preference_activity"
            android:icon="@android:drawable/btn_star"
            android:title="@string/preferences"
            android:onClick="loadPreferenceListActivity"/>
    </group>
</menu>