<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_header"
    android:layout_width="match_parent"
    android:layout_height="@dimen/drawer_header_height"
    android:background="@drawable/background_menu"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingTop="60dp"
    android:paddingRight="20dp"
    android:paddingBottom="20dp">

    <FrameLayout
        android:layout_width="@dimen/user_picture_small_diameter"
        android:layout_height="@dimen/user_picture_small_diameter"
        android:padding="2dp">

        <android.support.v7.widget.CardView
            android:id="@+id/cvProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="@dimen/user_picture_small_radius">

            <ImageView
                android:id="@+id/userpic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/userpicture"
                android:scaleType="centerCrop"
                android:src="@android:drawable/btn_dialog" />
        </android.support.v7.widget.CardView>
    </FrameLayout>

    <TextView
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/username"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/usermail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:text="@string/userMail"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:textStyle="italic" />
</LinearLayout>